<resources>
    <string name="app_name">Group8_InClass02</string>
    <string name="ticket_price">Ticket Price:</string>
    <string name="discount">Discount:</string>
    <string name="discounted_price">Discounted Price:</string>
    <string name="enter_ticket_price">Enter Ticket Price</string>
    <string name="percent_5">5%</string>
    <string name="percent_10">10%</string>
    <string name="percent_15">15%</string>
    <string name="percent_20">20%</string>
    <string name="percent_50">50%</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>

</resources>