<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16.0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ticket_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/ticket_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price" />

    <EditText
        android:id="@+id/editTextTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_ticket_price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_price"
        app:layout_constraintStart_toEndOf="@+id/ticket_price"
        app:layout_constraintTop_toTopOf="@+id/ticket_price"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintStart_toEndOf="@+id/discount"
        app:layout_constraintTop_toTopOf="@+id/discount">

        <RadioButton
            android:id="@+id/radioButton_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_5" />

        <RadioButton
            android:id="@+id/radioButton_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_10" />

        <RadioButton
            android:id="@+id/radioButton_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_15" />

        <RadioButton
            android:id="@+id/radioButton_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_20" />

        <RadioButton
            android:id="@+id/radioButton_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_50" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/discounted_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="110dp"
        android:paddingRight="110dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

    <TextView
        android:id="@+id/textViewDiscountedPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>